appId: com.p2pkidsmarketplace
---
- launchApp
- assertVisible: "Home"
- tapOn: "Profile"
- assertVisible: "Profile"
- tapOn:
    id: "settings-button"
- assertVisible: "Settings"
- tapOn:
    id: "settings-tos-button"
- waitForAnimationToEnd
- assertVisible:
    id: "tos-screen"
- assertVisible:
    id: "tos-title"
- assertVisible:
    id: "tos-version"
- assertVisible:
    id: "tos-content"
- back
- launchApp:
    clearState: true
- tapOn: "Sign Up"
- assertVisible: "Create Account"
- tapOn:
    id: "signup-terms-of-service-link"
- waitForAnimationToEnd
- assertVisible:
    id: "tos-screen"
- assertVisible:
    id: "accept-tos-button"
- assertVisible:
    id: "decline-tos-button"
- tapOn:
    id: "decline-tos-button"
- waitForAnimationToEnd
- assertVisible: "Create Account"
